# the-c-programing-language

./: .gitignore  CMakeLists.txt  main  main.c
caesarean_cypher/: .gitignore  caesarean_cypher.c
count-char/: count-char.c
de-commenter/: de-commenter.c  test.c
despace/: despacer  despacer.c
detab/: detab.c
fahrenheit-to-celsius-conversion-table/: fahrenheit-to-celsius-conversion-table.c
fahrenheit-to-celsius-convertion-table/: fahrenheit-to-celsius-converstion-table.c
fold/: fold.c
greetings/: .gitignore  greetings  greetings.c
hangman/: .gitignore  hangman.c
hex-filter/: char-pagination-test.txt  hex-filter.c
merge-strings-alternately/: merge-strings  merge-strings-alternately.c
nato_filter/: .gitignore  nato_filter.c  unnatoed-text.txt
nato_phonetic_alphabet_converter/: .gitignore  nato-parser  nato_phonetic_alphabet_converter.c  nato_phonetic_alphabet_parser.c
nato_phonetical_alphabet/: .gitignore  nato-parser  nato_phonetic_alphabet_parser.c  nato_phonetic_alphabet_translator.c  nato_phonetical_alphabet.c  npa
number-guessing-game/: number-guessing-number.c
pithy/: .gitignore  pithy01.c
print-char/: print-char.c
print-name/: print-name.c
reveal-special-characters/: reveal-special-characters.c
reverse-string/: reverse  reverse-str.c
word-counter/: wc  word-counter.c
word-filter/: word_filter.c
