cmake_minimum_required(VERSION 3.27)
project(the_c_programing_language C)

set(CMAKE_C_STANDARD 23)

add_executable(the_c_programing_language main.c)
add_executable(print-name print-name/print-name.c)
add_executable(fahrenheit-to-celsius-conversion-table fahrenheit-to-celsius-conversion-table/fahrenheit-to-celsius-conversion-table.c)
add_executable(number-guessing-game number-guessing-game/number-guessing-number.c)
add_executable(print-char print-char/print-char.c)
add_executable(word-counter word-counter/word-counter.c)
add_executable(merge-strings-alternately merge-strings-alternately/merge-strings-alternately.c)
add_executable(greetings greetings/greetings.c)
add_executable(reveal-special-characters reveal-special-characters/reveal-special-characters.c)
add_executable(pithy pithy/pithy01.c)
add_executable(nato_phonetic_alphabet_converter nato_phonetic_alphabet_converter/nato_phonetic_alphabet_converter.c)
add_executable(nato_phonetic_alphabet_parser nato_phonetic_alphabet_converter/nato_phonetic_alphabet_parser.c)
add_executable(caesarean_cypher caesarean_cypher/caesarean_cypher.c)
